--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -12,9 +12,8 @@ confinement: devmode # use 'strict' once you have the right plugs and slots
 
 parts:
   mzo:
+    after: [python3.6]
     source: .
-    plugin: python
-    python-version: python3
     build: |
       pip install pipenv
       pipenv install
