snap use python 3.6

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -30,6 +30,7 @@ parts:
     install: |
       # Create directory to serve as mount point for Python
       mkdir $SNAPCRAFT_PART_INSTALL/python
+      ls $SNAPCRAFT_PART_INSTALL/python
       python3 -V
     prime:
       - python/
