snap use python 3.6

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -20,8 +20,6 @@ plugs:
 apps:
   mzo:
     command: bin/mzo
-    override-build: |
-      python3 -V
     plugs:
       - python3
 
@@ -32,5 +30,7 @@ parts:
     install: |
       # Create directory to serve as mount point for Python
       mkdir $SNAPCRAFT_PART_INSTALL/python
+      pip3 install pipenv
+      pipenv install
     prime:
       - python/
