--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -30,7 +30,9 @@ parts:
     override-build: |
       # Create directory to serve as mount point for Python
       mkdir $SNAPCRAFT_PART_INSTALL/python
-      $SNAPCRAFT_PART_INSTALL/python/bin/python -V
+    install:
+      python3 -V
+      $SNAPCRAFT_PART_INSTALL/python/bin/python3 -V
       pip install pipenv
       pipenv install
     prime:
