snap use python 3.6

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -30,8 +30,8 @@ parts:
     override-build: |
       # Create directory to serve as mount point for Python
       mkdir $SNAPCRAFT_PART_INSTALL/python
-    install:
       python3 -V
+      $SNAP/bin/python3.6 -V
       $SNAPCRAFT_PART_INSTALL/python/bin/python3 -V
       pip install pipenv
       pipenv install
