snap use python 3.6

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -31,8 +31,8 @@ parts:
       # Create directory to serve as mount point for Python
       mkdir $SNAPCRAFT_PART_INSTALL/python
       python3 -V
-      $SNAP/bin/python3.6 -V
-      $SNAPCRAFT_PART_INSTALL/python/bin/python3 -V
+#      $SNAP/bin/python3.6 -V
+      ls $SNAPCRAFT_PART_INSTALL/python
       pip install pipenv
       pipenv install
     prime:
