--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -16,9 +16,6 @@ apps:
 
 parts:
   mzo:
-    plugin: nil
-    stage-packages:
-      - python3.6
-    source: .
-    build: |
-      python3.6 -V
+    plugin: make
+    source: https://www.python.org/ftp/python/3.6.5/Python-3.6.5.tar.xz
+    source-checksum: md5/9f49654a4d6f733ff3284ab9d227e9fd
