--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -16,11 +16,15 @@ apps:
 
 parts:
   python36:
-    plugin: make
+    plugin: nil
+    stage-packages:
+      - make
     source: https://www.python.org/ftp/python/3.6.5/Python-3.6.5.tar.xz
     source-checksum: md5/9f49654a4d6f733ff3284ab9d227e9fd
-    prepare: |
+    build: |
       ./configure
+      make
+      sudo make install
   mzo:
     after: [python36]
     plugin: nil
