--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -19,6 +19,7 @@ parts:
     plugin: nil
     stage-packages:
       - make
+      - zlib
     source: https://www.python.org/ftp/python/3.6.5/Python-3.6.5.tar.xz
     source-checksum: md5/9f49654a4d6f733ff3284ab9d227e9fd
     build: |
