snap use python 3.6

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -12,14 +12,13 @@ confinement: devmode # use 'strict' once you have the right plugs and slots
 
 apps:
   mzo:
-    command: bin/mzo
+    command: /usr/local/bin/mzo
 
 parts:
   python36:
     plugin: nil
     stage-packages:
       - make
-      - zlib
     source: https://www.python.org/ftp/python/3.6.5/Python-3.6.5.tar.xz
     source-checksum: md5/9f49654a4d6f733ff3284ab9d227e9fd
     build: |
