--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -21,7 +21,7 @@ parts:
     stage-packages:
       - make
       - zlib1g-dev
-      - opensslo
+      - openssl
       - libssl-dev
     source: https://www.python.org/ftp/python/3.6.5/Python-3.6.5.tar.xz
     source-checksum: md5/9f49654a4d6f733ff3284ab9d227e9fd
