--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "docs:deploy": "./scripts/deploy-docs.sh",
 
     "mzo:deploy": "pipenv run python setup.py upload",
-    "postmzo:deploy": "pipenv run python ./scripts/deploy-snapcraft.py && pipenv run python ./scripts/deploy-homebrew.py"
+    "postmzo:deploy": "pipenv run python ./scripts/deploy-homebrew.py"
   },
   "devDependencies": {
     "vuepress": "^0.10.1"
