--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .idea/
 .vscode/
 docs/.vuepress/dist
-app_dir
+app_data
 
 # Created by https://www.gitignore.io/api/macos,linux,windows,python,node
 
