--- a/Pipfile
+++ b/Pipfile
@@ -32,4 +32,5 @@ black = "*"
 allow_prereleases = true
 
 [scripts]
-deploy_hombrew = "python scripts/deploy_homebrew.py"
+deploy_hombrew = "python scripts/deploy-homebrew.py"
+deploy_snapcraft = "python scripts/deploy-snapcraft.py"
