--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -18,8 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        pip install pipenv
-        pipenv install --system --deploy --ignore-pipfile
+        python setup.py install
     - name: Lint with flake8
       run: |
         pip install flake8
