--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ ordered-set = "*"
 python-dateutil = "*"
 mzo = {editable = true,path = "."}
 fuzzywuzzy = {extras = ["speedup"],version = "*"}
+idna = "<2.9"  # temp: requests requiring <2.9
 
 [dev-packages]
 twine = "*"
