--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1,55 +1,55 @@
-name: Continuous Integration
+# name: Continuous Integration
 
-on: [push]
+# on: [push]
 
-jobs:
-  build_and_test:
-    name: Ubuntu Build & Test
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7, 3.8]
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Build
-      run: |
-        python -m pip install --upgrade pip setuptools wheel
-        python setup.py install
-        python setup.py sdist bdist_wheel --universal
-    - name: Lint
-      run: |
-        pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test
-      run: |
-        pip install pytest
-        pytest
-    - name: Save Dist
-      uses: actions/upload-artifact@v1
-      with:
-        name: dist
-        path: dist
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    needs: build_and_test
-    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
-    steps:
-    - name: Load Dist
-      uses: actions/download-artifact@v1
-      with:
-        name: dist
-    - name: Deploy to PyPI
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-      run: |
-        pip install twine
-        python -m twine upload dist/*
+# jobs:
+#   build_and_test:
+#     name: Ubuntu Build & Test
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         python-version: [3.6, 3.7, 3.8]
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Set up Python ${{ matrix.python-version }}
+#       uses: actions/setup-python@v1
+#       with:
+#         python-version: ${{ matrix.python-version }}
+#     - name: Build
+#       run: |
+#         python -m pip install --upgrade pip setuptools wheel
+#         python setup.py install
+#         python setup.py sdist bdist_wheel --universal
+#     - name: Lint
+#       run: |
+#         pip install flake8
+#         # stop the build if there are Python syntax errors or undefined names
+#         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+#         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+#         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+#     - name: Test
+#       run: |
+#         pip install pytest
+#         pytest
+#     - name: Save Dist
+#       uses: actions/upload-artifact@v1
+#       with:
+#         name: dist
+#         path: dist
+#   deploy:
+#     name: Deploy
+#     runs-on: ubuntu-latest
+#     needs: build_and_test
+#     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
+#     steps:
+#     - name: Load Dist
+#       uses: actions/download-artifact@v1
+#       with:
+#         name: dist
+#     - name: Deploy to PyPI
+#       env:
+#         TWINE_USERNAME: __token__
+#         TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+#       run: |
+#         pip install twine
+#         python -m twine upload dist/*
