--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,9 +16,9 @@ jobs:
     runs-on: [self-hosted, macos-latest]
     steps:
       - uses: actions/checkout@v2
-      - id: creating virtual environment
+      - id: creating_virtual_environment
         run: npm install
-      - id: building docs
+      - id: building_docs
         run: npm run docs:build
-      - id: deploying docs
+      - id: deploying_docs
         run: cp -R docs/.vuepress/dist ~/Desktop/output
