--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,7 +13,7 @@ env:
 jobs:
   build-docs:
     name: Building Docs
-    runs-on: [self-hosted, macos]
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
       - id: creating_virtual_environment
