--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,7 +9,7 @@ on:
     paths:
       - docs/**
 env:
-  RELEASE_NAME: ${${{ github.ref }}#*/*/}
+  RELEASE_NAME: ${{ github.ref }}
   PIPENV_VENV_IN_PROJECT: true
 jobs:
   build-docs:
@@ -22,4 +22,4 @@ jobs:
       - id: building_docs
         run: npm run docs:build
       - id: deploying_docs
-        run: cp -R docs/.vuepress/dist ~/Desktop/output/${RELEASE_NAME}
+        run: cp -R docs/.vuepress/dist ~/Desktop/output/${RELEASE_NAME#*/*/}
