--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,13 @@ homebrew-pypi-poet = "^0.10.0"
 pytest = "^7.1.2"
 twine = "^4.0.0"
 
+[tool.isort]
+profile = "black"
+length_sort = true
+
+[tool.black]
+line-length = 80
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
