--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-  "engines": {
-    "node": ">=11.0.0",
-    "npm": ">=6.4.1"
-  },
+  "name": "mzo-cli",
   "scripts": {
     "test": "pipenv run pytest",
     "docs:dev": "vuepress dev docs",
@@ -12,6 +9,6 @@
     "postmzo:deploy": "pipenv run python ./scripts/deploy-homebrew.py"
   },
   "devDependencies": {
-    "vuepress": "^1.9.10"
+    "vuepress": "^2.0.0-beta.67"
   }
 }
