--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: Docs Build & Deploy
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       - docs/**
       - package-lock.json
