--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
     "postmzo:deploy": "pipenv run python ./scripts/deploy-homebrew.py"
   },
   "devDependencies": {
-    "vuepress": "^2.0.0-beta.67"
+    "vuepress": "^2.0.0-rc.0"
   }
 }
